; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_fib.c_dn_fib_get_attr16.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_fib.c_dn_fib_get_attr16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtattr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dn_fib_get_attr16(%struct.rtattr* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.rtattr*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.rtattr* %0, %struct.rtattr** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  br label %8

8:                                                ; preds = %24, %3
  %9 = load %struct.rtattr*, %struct.rtattr** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i64 @RTA_OK(%struct.rtattr* %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %8
  %14 = load %struct.rtattr*, %struct.rtattr** %5, align 8
  %15 = getelementptr inbounds %struct.rtattr, %struct.rtattr* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %7, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %13
  %20 = load %struct.rtattr*, %struct.rtattr** %5, align 8
  %21 = call i64 @RTA_DATA(%struct.rtattr* %20)
  %22 = inttoptr i64 %21 to i32*
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %13
  %25 = load %struct.rtattr*, %struct.rtattr** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call %struct.rtattr* @RTA_NEXT(%struct.rtattr* %25, i32 %26)
  store %struct.rtattr* %27, %struct.rtattr** %5, align 8
  br label %8

28:                                               ; preds = %8
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i64 @RTA_OK(%struct.rtattr*, i32) #1

declare dso_local i64 @RTA_DATA(%struct.rtattr*) #1

declare dso_local %struct.rtattr* @RTA_NEXT(%struct.rtattr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
